--- a/views/campaigns.html
+++ b/views/campaigns.html
@@ -58,7 +58,21 @@
                             <line x1="21" y1="21" x2="16.65" y2="16.65"></line>
                             </svg>
                     </button>
-                </form>     
+                </form>
+                <form id="campaign-filter">
+                    <span>Filtrar campanha</span>
+                    <input type="checkbox" id="active-option">
+                    <label for="active-option">Ativa</label>
+
+                    <input type="checkbox" id="finished-option">
+                    <label for="finished-option">Encerrada</label>
+                    
+                    <input type="checkbox" id="overdue-option">
+                    <label for="overdue-option">Vencida</label>
+                    
+                    <input type="checkbox" id="completed-option">
+                    <label for="completed-option">Concluída</label>
+                </form>
             </div>
             
         </div>
