--- a/styles/campaigns.css
+++ b/styles/campaigns.css
@@ -82,7 +82,7 @@ h2 {
 }
 
 #container-campaigns {
-    margin: 30px 0%;
+    margin: 30px 0% 25px 0%;
     text-align: center;
 }
 
@@ -126,6 +126,36 @@ h2 {
     color: #eeeeee;
     background-color: #4a8fda;
 }
+
+#campaign-filter {
+    background-color: #E8E8E8;
+    padding: 12px;
+}
+
+
+#campaign-filter span {
+    border-top-left-radius: 6px;
+    border-bottom-left-radius: 6px;
+    padding: 12px;
+    color: #eeeeee;
+    background-color: #4a8fda;
+}
+
+
+#campaign-filter input {
+    width: 15px;
+    height: 15px;
+    background: #FFF;
+    margin-left: 8px;
+}
+
+#campaign-filter label {
+    font-size: 18px;
+    color: #444;
+}
+
+
+
 footer {
     padding: 2px 0;
     background-color: #4a8fda;
