--- a/views/campaigns.html
+++ b/views/campaigns.html
@@ -41,7 +41,7 @@
         <br>
     </div>
 
-    <!-- CAMPANHAS -->
+    <!-- BUSCAR CAMPANHA -->
     <section id="campaigns-list-section">
         <div id="container-campaigns">
             <h2>Buscar campanha</h2>
@@ -61,6 +61,7 @@
                 </form>
                 <form id="campaign-filter">
                     <span>Filtrar campanha</span>
+
                     <input type="checkbox" id="active-option">
                     <label for="active-option">Ativa</label>
 
@@ -78,6 +79,14 @@
         </div>
     </section>  
     
+    <!-- CAMPANHAS -->
+
+    <section id="campaigns-section">
+        <div id="container">
+            
+        </div>
+    </section>
+
     <!-- RODAPÉ -->
     <footer class="center-footer">
         <div class="sub-footer">
