--- a/views/campaigns.html
+++ b/views/campaigns.html
@@ -7,7 +7,7 @@
     <meta name="keywords" content="crowdfunding, doação, vaquinha">
     <meta name="keywords" content="Uma plataforma de crowdfunding gratuita feita para você!">
     <link rel="stylesheet" href="../styles/campaigns.css">
-    <script src="../services/campaignListService.js" type="module"></script>
+    <script src="../services/searchService.js" type="module"></script>
 </head>
 <body>
     <!-- NAVBAR -->
