--- a/views/campaign.html
+++ b/views/campaign.html
@@ -43,7 +43,37 @@
 
     <!-- CAMPANHAS -->
     <section id="campaign-section">
+        <div id="campaign-header">
+            <div>
+                <img src="../styles/img/logo.png" height="90px" alt="">
+                <h3 id="campaign-title">NOME DA CAMPANHA</h3>
+                <span id="percent-value">0.0%</span>
+            </div>
+        </div>
         <div id="container-list">
+            <div id="owner-div">
+                <a href="">
+                    <img src="../styles/img/profile.png" alt="profile logo">
+                    <p id="owner-fname">Gabriel</p>
+                    <p id="owner-lname">Fernandes</p>
+                </a>
+            </div>
+            <div id="deadline-div">
+                <img src="../styles/img/calendar.png" height="60px" alt="calender logo">
+                <p>ENCERRA EM:</p>
+                <span id="campaign-status">00/00/00</span>
+            </div>
+            <div id="status-div">
+                <img src="../styles/img/status.png" height="58px" alt="">
+                <p>STATUS</p>
+                <span id="campaign-status">Ativa</span>
+            </div>
+            <div id="description-div">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta sapiente harum, odit culpa vel aliquid, 
+                doloremque illum rerum, quidem iste exercitationem. Ex sit ratione voluptatum nulla illo hic repudiandae quas?
+            </div>
+        </div>
+        <div id="campaign-content">
 
         </div>
     </section>
