--- a/views/campaign.html
+++ b/views/campaign.html
@@ -47,7 +47,11 @@
             <div>
                 <img src="../styles/img/logo.png" height="90px" alt="">
                 <h3 id="campaign-title">NOME DA CAMPANHA</h3>
-                <span id="percent-value">0.0%</span>
+                <div id="campaign-title-div">
+                    <p>META R$:</p>
+                    <p id="goal">00,00</p>
+                    <span id="percent-value">0.0%</span>
+                </div>
             </div>
         </div>
         <div id="container-list">
@@ -61,7 +65,7 @@
             <div id="deadline-div">
                 <img src="../styles/img/calendar.png" height="60px" alt="calender logo">
                 <p>ENCERRA EM:</p>
-                <span id="campaign-status">00/00/00</span>
+                <span id="campaign-deadline">00/00/00</span>
             </div>
             <div id="status-div">
                 <img src="../styles/img/status.png" height="58px" alt="">
@@ -69,8 +73,8 @@
                 <span id="campaign-status">Ativa</span>
             </div>
             <div id="description-div">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta sapiente harum, odit culpa vel aliquid, 
-                doloremque illum rerum, quidem iste exercitationem. Ex sit ratione voluptatum nulla illo hic repudiandae quas?
+                <p id="campaign-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta sapiente harum, odit culpa vel aliquid, 
+                        doloremque illum rerum, quidem iste exercitationem. Ex sit ratione voluptatum nulla illo hic repudiandae quas?</p>
             </div>
         </div>
         <div id="campaign-content">
