--- a/views/campaign.html
+++ b/views/campaign.html
@@ -41,45 +41,59 @@
         <br>
     </div>
 
-    <!-- CAMPANHAS -->
-    <section id="campaign-section">
+    <!-- CAMPANHA -->
+    <section id="campaign-section-header">
         <div id="campaign-header">
             <div>
                 <img src="../styles/img/logo.png" height="90px" alt="">
-                <h3 id="campaign-title">NOME DA CAMPANHA</h3>
+                <h3 id="campaign-title"></h3>
                 <div id="campaign-title-div">
+                    <p>VALOR ATUAL: R$</p>
+                    <p id="current-value"></p>
+                    <p> | </p>
                     <p>META R$:</p>
-                    <p id="goal">00,00</p>
-                    <span id="percent-value">0.0%</span>
+                    <p id="goal"></p>
+                    <span id="percent-value"></span>
                 </div>
             </div>
         </div>
-        <div id="container-list">
-            <div id="owner-div">
-                <a href="">
-                    <img src="../styles/img/profile.png" alt="profile logo">
-                    <p id="owner-fname">Gabriel</p>
-                    <p id="owner-lname">Fernandes</p>
-                </a>
-            </div>
-            <div id="deadline-div">
-                <img src="../styles/img/calendar.png" height="60px" alt="calender logo">
-                <p>ENCERRA EM:</p>
-                <span id="campaign-deadline">00/00/00</span>
-            </div>
-            <div id="status-div">
-                <img src="../styles/img/status.png" height="58px" alt="">
-                <p>STATUS</p>
-                <span id="campaign-status">Ativa</span>
-            </div>
-            <div id="description-div">
-                <p id="campaign-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta sapiente harum, odit culpa vel aliquid, 
-                        doloremque illum rerum, quidem iste exercitationem. Ex sit ratione voluptatum nulla illo hic repudiandae quas?</p>
-            </div>
-        </div>
-        <div id="campaign-content">
+    </section>
 
+    <!-- CAMPAIGN DATA -->
+    <section id="container-list">
+        <div id="owner-div">
+            <a href="">
+                <img src="../styles/img/profile.png" alt="profile logo">
+                <p id="owner-fname"></p>
+                <p id="owner-lname"></p>
+            </a>
         </div>
+        <div id="deadline-div">
+            <img src="../styles/img/calendar.png" height="60px" alt="calender logo">
+            <p>ENCERRA EM:</p>
+            <span id="campaign-deadline"></span>
+        </div>
+        <div id="status-div">
+            <img src="../styles/img/status.png" height="58px" alt="">
+            <p>STATUS</p>
+            <span id="campaign-status"></span>
+        </div>
+        <div id="description-div">
+            <p id="campaign-description"></p>
+        </div>
+    </section>
+
+    <!-- AUX -->
+    <div id="aux-div-2">
+        <br>
+    </div>
+
+    <!-- GERENCIAMENTO DE CAMPANHA -->
+    <section id="manage-container">
+        <a>
+            <span>Gerencie sua campanha</span>
+            <img src="../styles/img/edit.png" height="25px" alt="">
+        </a>
     </section>
 
     <!-- RODAPÉ -->
