--- a/views/campaign.html
+++ b/views/campaign.html
@@ -99,8 +99,84 @@
     <!-- MODAL DE EDIÇÃO -->
     <section id="edit-modal" class="modal">
         <div class="modal-content">
-            <span id="closeBtn">&times;</span>
-            <p>Hello... I'm a model</p>
+            <div class="modal-header">
+                <span id="closeBtn">&times;</span>
+                <h3>Alterar dados da campanha</h3>
+            </div>
+            <div class="modal-body">
+                <form>
+                    <label>Descrição</label>
+                    <textarea id="campaign-description" cols="58" rows="8" maxlength="400" required></textarea>
+
+                    <label>Meta de arrecadação (R$)</label>
+                    <input type="number" min="1" id="campaign-goal" required>
+
+                    <label>Encerra em</label>
+                    <select id="campaign-deadline-day" required>
+                        <option value="01">1</option>
+                        <option value="02">2</option>
+                        <option value="03">3</option>
+                        <option value="04">4</option>
+                        <option value="05">5</option>
+                        <option value="06">6</option>
+                        <option value="07">7</option>
+                        <option value="08">8</option>
+                        <option value="09">9</option>
+                        <option value="10">10</option>
+                        <option value="11">11</option>
+                        <option value="12">12</option>
+                        <option value="13">13</option>
+                        <option value="14">14</option>
+                        <option value="15">15</option>
+                        <option value="16">16</option>
+                        <option value="17">17</option>
+                        <option value="18">18</option>
+                        <option value="19">19</option>
+                        <option value="20">20</option>
+                        <option value="21">21</option>
+                        <option value="22">22</option>
+                        <option value="23">23</option>
+                        <option value="24">24</option>
+                        <option value="25">25</option>
+                        <option value="26">26</option>
+                        <option value="27">27</option>
+                        <option value="28">28</option>
+                        <option value="29">29</option>
+                        <option value="30">30</option>
+                        <option value="31">31</option>
+                    </select>
+                    <select id="campaign-deadline-month" required>
+                        <option value="Janeiro">Janeiro</option>
+                        <option value="Fevereiro">Fevereiro</option>
+                        <option value="Março">Março</option>
+                        <option value="Abril">Abril</option>
+                        <option value="Maio">Maio</option>
+                        <option value="Junho">Junho</option>
+                        <option value="Julho">Julho</option>
+                        <option value="Agosto">Agosto</option>
+                        <option value="Setembro">Setembro</option>
+                        <option value="Outubro">Outubro</option>
+                        <option value="Novembro">Novembro</option>
+                        <option value="Dezembro">Dezembro</option>
+                    </select>
+                    <select id="campaign-deadline-year" required>
+                        <option value="2019">2019</option>
+                        <option value="2020">2020</option>
+                        <option value="2021">2021</option>
+                        <option value="2022">2022</option>
+                        <option value="2023">2023</option>
+                        <option value="2024">2024</option>
+                        <option value="2025">2025</option>
+                        <option value="2026">2026</option>
+                    </select>
+                    <button>Alterar dados</button>
+                </form>
+
+                <button id="finish-campaign-btn">Encerrar campanha</button>
+            </div>
+            <div class="modal-footer">
+
+            </div>
         </div>
     </section>
 
