--- a/views/campaign.html
+++ b/views/campaign.html
@@ -101,7 +101,7 @@
         <div class="modal-content">
             <div class="modal-header">
                 <span id="closeBtn">&times;</span>
-                <h3>Alterar dados da campanha</h3>
+                <h4>Alterar dados da campanha</h4>
             </div>
             <div class="modal-body">
                 <form>
@@ -172,10 +172,10 @@
                     <button>Alterar dados</button>
                 </form>
 
-                <button id="finish-campaign-btn">Encerrar campanha</button>
             </div>
             <div class="modal-footer">
-
+                <h4>Encerrar campanha</h4>
+                <button id="finish-campaign-btn">Encerrar campanha</button>
             </div>
         </div>
     </section>
