--- a/views/register.html
+++ b/views/register.html
@@ -50,12 +50,12 @@
             <form class="submit-form">
                 <div class="form-group">
                     <label>Primeiro nome</label>
-                    <input type="text" id="register-first-name" required>
+                    <input type="text" id="register-first-name" maxlength="15" required>
                 </div>
 
                 <div class="form-group">
                     <label>Último nome</label>
-                    <input type="text" id="register-last-name" required>
+                    <input type="text" id="register-last-name" maxlength="15" required>
                 </div>
 
                 <div class="form-group">
@@ -65,17 +65,17 @@
 
                 <div class="form-group">
                     <label>Nº do cartão de crédito</label>
-                    <input type="number" id="register-creditcard" required>
+                    <input type="number" id="register-creditcard" maxlength="30" required>
                 </div>
 
                 <div class="form-group">
                     <label>Senha</label>
-                    <input type="password" id="register-password" required>
+                    <input type="password" id="register-password" minlength="8" required>
                 </div>
 
                 <div class="form-group">
                     <label>Confirme a senha</label>
-                    <input type="password" id="register-password-confirm" required>
+                    <input type="password" id="register-password-confirm" minlength="8" required>
                 </div>
 
                 <div class="form-group" >
