Criei os métodos da us4a, us4b e us4c

--- a/views/campaign.html
+++ b/views/campaign.html
@@ -106,10 +106,10 @@
             <div class="modal-body">
                 <form>
                     <label>Descrição</label>
-                    <textarea id="campaign-description" cols="58" rows="8" maxlength="400" required></textarea>
+                    <textarea id="campaign-update-description" cols="58" rows="8" maxlength="400" required></textarea>
 
                     <label>Meta de arrecadação (R$)</label>
-                    <input type="number" min="1" id="campaign-goal" required>
+                    <input type="number" min="1" id="campaign-update-goal" required>
 
                     <label>Encerra em</label>
                     <select id="campaign-deadline-day" required>
@@ -169,7 +169,7 @@
                         <option value="2025">2025</option>
                         <option value="2026">2026</option>
                     </select>
-                    <button>Alterar dados</button>
+                    <button id="update-data-btn">Alterar dados</button>
                 </form>
 
             </div>
