--- a/views/campaign.html
+++ b/views/campaign.html
@@ -107,9 +107,11 @@
                 <form>
                     <label>Descrição</label>
                     <textarea id="campaign-update-description" cols="58" rows="8" maxlength="400" required></textarea>
+                    <button id="update-description-btn">Alterar descrição</button>
 
                     <label>Meta de arrecadação (R$)</label>
                     <input type="number" min="1" id="campaign-update-goal" required>
+                    <button id="update-goal-btn">Alterar meta</button>
 
                     <label>Encerra em</label>
                     <select id="campaign-deadline-day" required>
@@ -169,7 +171,7 @@
                         <option value="2025">2025</option>
                         <option value="2026">2026</option>
                     </select>
-                    <button id="update-data-btn">Alterar dados</button>
+                    <button id="update-deadline-btn">Alterar deadline</button>
                 </form>
 
             </div>
