--- a/views/campaign.html
+++ b/views/campaign.html
@@ -8,6 +8,8 @@
     <meta name="keywords" content="Uma plataforma de crowdfunding gratuita feita para você!">
     <link rel="stylesheet" href="../styles/campaigns.css">
     <script src="../services/campaignService.js" type="module"></script>
+    <script src="../services/manageService.js" type="module"></script>
+    <script src="../services/commentService.js" type="module"></script>
 </head>
 <body>
     <!-- NAVBAR -->
