--- a/views/campaign.html
+++ b/views/campaign.html
@@ -191,7 +191,10 @@
         </div>
 
         <div id="add-comment-div">
-
+            <form id="comment-form">
+                <label>Adicionar comentário</label>
+                <textarea id="comment-area" cols="30" rows="10"></textarea>
+            </form>
         </div>
 
         <div id="comments-div">
