--- a/views/campaign.html
+++ b/views/campaign.html
@@ -193,17 +193,34 @@
         <div id="add-comment-div">
             <form id="comment-form">
                 <label>Adicionar comentário</label>
-                <textarea id="comment-area" cols="30" rows="10"></textarea>
+                <textarea id="comment-area" cols="50" rows="4" maxlength="254"></textarea>
+                <button id="send-comment">Enviar</button>
             </form>
         </div>
 
         <div id="comments-div">
+            <h2>Comentários</h2>
+
+            <div class="comment">
+                <!-- <div class="comment-unit">
+                    <div class="infos-comment"></div>
+                    <a class="comment-profile">
+                        <p class="comment-username">Gabriel Costa</p>
+                    </a>
+                    <p class="comment-time">19h27</p>
+                    <p class="comment-area">Comentario teste asdhashdjka hsgdajk hsghask gas hgaj shvhj dvaskjh vhsa </p>
+                </div>
+
+                <button class="reply-btn">Responder</button> -->
+            </div>
+            
+
 
         </div>
     </section>
 
     <!-- RODAPÉ -->
-    <footer class="center-footer">
+    <footer class="center-footer" style="position: static;">
         <div class="sub-footer">
             <div id="text-footer">
                 <span class="">
