--- a/views/campaign.html
+++ b/views/campaign.html
@@ -189,8 +189,11 @@
     <section id="react-container">
         <div id="likes-div">
             <a id="like-btn"><img src="../styles/img/like.png" height="30px"></a>
+            <a id="like-btn-hover"><img src="../styles/img/like-hover.png" height="30px"></a>
             <p id="likes-count"></p>
+            
             <a id="dislike-btn"><img src="../styles/img/dislike.png" height="30px"></a>
+            <a id="dislike-btn-hover"><img src="../styles/img/dislike-hover.png" height="30px"></a>
             <p id="dislikes-count"></p>
         </div>
 
