--- a/styles/campaigns.css
+++ b/styles/campaigns.css
@@ -288,10 +288,10 @@ footer {
 }
 
 #deadline-div span{
-    font-size: 15px;
+    font-size: 14px;
     color: #4a8fda;
     background-color: #FFF;
-    padding: 3px 5px;
+    padding: 1px 5px;
     text-transform: uppercase;
 }
 
@@ -302,13 +302,14 @@ footer {
 }
 
 #status-div p{
+    font-size: 12px;
     margin-bottom: 3px;
 }
 
 #status-div span{
     color: #4a8fda;
     background-color: #FFF;
-    padding: 3px 5px;
+    padding: 1px 5px;
     text-transform: uppercase;
     font-size: 13px;
 }
@@ -469,8 +470,10 @@ footer {
 }
 
 #likes-div {
-    padding: 20px;
-    background-color: #E8E8E8;
+    padding: 10px;
+    display: block;
+    margin: 0 auto;
+    width: 150px;
 }
 
 #likes-div a, p {
