--- a/views/campaign.html
+++ b/views/campaign.html
@@ -187,6 +187,7 @@
 
     <!-- INTERAÇÃO -->
     <section id="react-container">
+        <!-- LIKES -->
         <div id="likes-div">
             <a id="like-btn"><img src="../styles/img/like.png" height="30px"></a>
             <a id="like-btn-hover"><img src="../styles/img/like-hover.png" height="30px"></a>
@@ -197,6 +198,7 @@
             <p id="dislikes-count"></p>
         </div>
 
+        <!-- COMENTÁRIOS -->
         <div id="add-comment-div">
             <form id="comment-form">
                 <label>Adicionar comentário</label>
