--- a/views/campaigns.html
+++ b/views/campaigns.html
@@ -81,7 +81,7 @@
     
     <!-- CAMPANHAS -->
     <section id="campaigns-section">
-        <div id="container-list">
+        <div id="container-list-campaigns">
 
         </div>
     </section>
