--- a/views/profile.html
+++ b/views/profile.html
@@ -53,18 +53,17 @@
     
     <!-- DADOS -->
     <section id="my-data-section">
-        <h3>
-            Meus dados
-        </h3>
+        <h3>Meus dados</h3>
+
         <div id="my-data-div">
-            <ul>
-                <li>
-                    <span>Nome</span>
-                </li>
-                <li>
-                    <span>Último nome</span>
-                </li>
-            </ul>
+            <span>Primeiro nome</span>
+            <p id="profile-fname"></p>
+
+            <span>Último nome</span>
+            <p id="profile-lname"></p>
+
+            <span>Email</span>
+            <p id="profile-email"></p>
         </div>
     </section>
 
