--- a/views/profile.html
+++ b/views/profile.html
@@ -67,13 +67,23 @@
         </div>
     </section>
 
-    <!-- CAMPANHAS -->
-    <section id="my-campaigns-section">
-        <h3>
-            Minhas campanhas
-        </h3>
-        <div id="my-campaigns-div">
-            
+    <!-- ALTERAR SENHA -->
+    <section id="new-password-section">
+        <h3>Alterar minha senha</h3>
+        <div id="new-password-div">
+            <form class="submit-form">
+                <div class="form-group">
+                    <label>Nova senha</label>
+                    <input type="password" id="new-password" required>
+                </div>
+                <div class="form-group">
+                    <label>Confirme a senha</label>
+                    <input type="password" id="new-password-confirm" required>
+                </div>
+                <div class="form-group" >
+                    <button id="new-password-button" type="submit">Enviar</button>
+                </div>
+            </form>
         </div>
     </section>
 
